fixed spacing

--- a/style.css
+++ b/style.css
@@ -187,7 +187,6 @@ img{
         width: 12vw; 
         margin-right: 5vw;
         margin-bottom: 5vh; 
-        justify-self: left;
     }
     .home-college-box{
         height: 50vh; 
@@ -310,7 +309,6 @@ img{
         width: 15vw; 
         margin-right: 5vw;
         margin-bottom: 5vh; 
-        justify-self: left;
     }
     .home-college-box{
         height: 70vh; 
